[package]
authors = ["Masatatsu Nakamura <masatatsu.nakamura@gmail.com>"]
edition = "2018"
name = "pcd-lod"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.2", features = ["derive"] }
image = { version = "0.24.8", features = ["webp-encoder"] }
las = "0.8.2"
nalgebra = { version = "0.32.3", features = ["serde-serialize"] }
rand = { version = "0.8" }
rayon = "1.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
serial_test = "*"
