[package]
# authors = []
edition = "2021"
name = "pcd-lod"
version = "0.1.0"
description = "A LOD generator for point cloud files"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "~1.0.81"
clap = { version = "4.5.3", features = ["derive"] }
image = { version = "0.24.8", features = ["webp-encoder"] }
nalgebra = { version = "0.32.3", features = ["serde-serialize"] }
rand = { version = "0.8" }
rayon = "1.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
serial_test = "*"
