[package]
authors = ["THE UNIVERSITY OF TOKYO, SCHOOL OF ENGINEERING Construction System Management for Innovation"]
edition = "2021"
name = "pcd-lod"
version = "0.1.1"
description = "A LOD generator for point cloud files"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "~1.0.81"
clap = { version = "4.5.20", features = ["derive"] }
image = { version = "0.25.4", features = ["webp"] }
nalgebra = { version = "0.33.1", features = ["serde-serialize", "glam027", "glam028"] }
num-traits = "0.2.19"
itertools = { version = "0.13.0" }
rand = { version = "0.8" }
rayon = "1.10.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.40.0", features = ["full"] }
bevy = { version = "0.14.2", optional = true }
bevy_infinite_grid = { version = "0.13.0", optional = true }
bevy_panorbit_camera = { version = "0.19.3", optional = true }
bevy_points = { version = "0.6.0", optional = true }
bevy_polyline = { version = "0.10", optional = true }

[dev-dependencies]
serial_test = "*"
criterion = { version = "0.5.1" }

[features]
# default = []
default = ["bevy"] # for debugging example
bevy = [
  "dep:bevy",
  "dep:bevy_infinite_grid",
  "dep:bevy_panorbit_camera",
  "dep:bevy_points",
  "dep:bevy_polyline"
]

[[example]]
name = "sampling"
path = "examples/sampling.rs"
required-features = ["bevy"]

[[example]]
name = "parallel_sampling"
path = "examples/parallel_sampling.rs"
required-features = ["bevy"]

[[example]]
name = "lod"
path = "examples/lod.rs"
required-features = ["bevy"]

[[bench]]
name = "sampling"
harness = false
